force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ICF Non Real Times</relationshipLabel>
    <relationshipName>ICF_Non_Real_Times</relationshipName>
    <type>Lookup</type>
</CustomField>