force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>