force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ICF Non Real Times</relationshipLabel>
    <relationshipName>ICF_Non_Real_Times</relationshipName>
    <type>Lookup</type>
</CustomField>