force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Email_SMS_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Log</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>ICF Non Real Times</relationshipLabel>
    <relationshipName>ICF_Non_Real_Times</relationshipName>
    <type>Lookup</type>
</CustomField>