force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <label>Fraud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>