force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Jenis_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Transaksi__c</fullName>
    <label>Jenis Transaksi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CASHLESS</fullName>
                <default>true</default>
                <label>CASHLESS</label>
            </value>
            <value>
                <fullName>REIMBURSEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>