force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Nama_RS_Provider__c.field-meta.xml
<CustomField>
    <fullName>Nama_RS_Provider__c</fullName>
    <label>Nama RS/Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>