force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Proceed_ICF__c.field-meta.xml
<CustomField>
    <fullName>Proceed_ICF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceed ICF</label>
    <type>Checkbox</type>
</CustomField>