force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Reject_Date__c.field-meta.xml
<CustomField>
    <fullName>Reject_Date__c</fullName>
    <label>Reject Date</label>
    <type>Date</type>
</CustomField>