force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Status_Claim__c.field-meta.xml
<CustomField>
    <fullName>Status_Claim__c</fullName>
    <label>Status Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>