force-app/main/default/objects/ICF_Non_Real_Time__c/fields/Status_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Status_Fraud__c</fullName>
    <description>AHS: R0376, R0334
RLS: AF, PF
DMTM: AF, PA, PF, PW</description>
    <label>Status Fraud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>